Update (2023.07.03)
23738: [C2][LA] enable misaligned vectors store/load
29261: LA intrinsics for compareUnsigned method in Integer and Long
29201: LA port of 8283186: Explicitly pass a third temp register to MacroAssembler::store_heap_oop
31010: LA port of 8304915: Create jdk.internal.util.Architecture enum and apply
30943: LA port of 8303588: [JVMCI] make JVMCI source directories conform with standard layout
30829: LA port of 8291555: Implement alternative fast-locking scheme
30358: Add support for ordering memory barriers
30777: testlibrary_tests/ir_framework/tests/TestDFlags.java fail with VerifyOops
30895: LA port of 8302815: Use new Math.clamp method in core libraries
30894: TestArrayStructs.java fails after JDK-8303604